# practica_4

./: CMakeLists.txt  Device.cpp  Device.h  Display.cpp  Display.h  main.cpp
